Selection Tookit package v1/retrieveOutput/objects/Anchor__c.object
<CustomObject>
    <description>This object include pre-defined anchors</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anchor__c</fullName>
        <label>Anchor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor__c</fullName>
        <label>Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>People Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiring Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Challenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Bar Raiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <label>Competency</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream Big</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Our Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest And Ambition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Achievements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socio Economic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecting The Dots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Challenge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_Area__c</fullName>
        <label>Score Area</label>
        <picklist>
            <picklistValues>
                <fullName>Unfavorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favorable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Anchor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessor__c</columns>
        <columns>Competency__c</columns>
        <columns>Anchor__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessor__c</field>
            <operation>equals</operation>
            <value>Cultural Bar Raiser</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANC-{0000}</displayFormat>
        <label>Anchor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anchors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>